--- a/fitness/sass/style.scss
+++ b/fitness/sass/style.scss
@@ -1443,3 +1443,8 @@ figure {
 	z-index: 9999;
 	background: url(../images/hourglass.svg) center no-repeat #222222;
 }
+
+//SEARCH
+form#searchform {
+    color: black;
+}
