--- a/fitness/sass/style.scss
+++ b/fitness/sass/style.scss
@@ -1189,12 +1189,6 @@ figure {
 	}
 }
 
-.animate-box {
-	.js & {
-		opacity: 0;
-	}
-}
-
 
 
 #fh5co-wrapper {
@@ -1448,14 +1442,14 @@ figure {
 form#searchform {
     color: black;
 }
-
-<<<<<<< HEAD
 .search-result {
+    margin-top: 10px;
+    margin-bottom: 10px;
     h3 {
         color: white;
     }
 }
-=======
+
 input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
@@ -1547,22 +1541,6 @@ span.psw {
     cursor: pointer;
 }
 
-/* Add Zoom Animation */
-.animate {
-    -webkit-animation: animatezoom 0.6s;
-    animation: animatezoom 0.6s
-}
-
-@-webkit-keyframes animatezoom {
-    from {-webkit-transform: scale(0)} 
-    to {-webkit-transform: scale(1)}
-}
-    
-@keyframes animatezoom {
-    from {transform: scale(0)} 
-    to {transform: scale(1)}
-}
-
 /* Change styles for span and cancel button on extra small screens */
 @media screen and (max-width: 300px) {
     span.psw {
@@ -1573,4 +1551,3 @@ span.psw {
        width: 100%;
     }
 }
->>>>>>> 63295fe10273a7d730160932718d47d02f1a2b58
