css height auto

--- a/fitness/sass/style.scss
+++ b/fitness/sass/style.scss
@@ -174,7 +174,7 @@ figure {
 .fh5co-cover,
 .fh5co-hero {
 	position: relative;
-	height: 800px;
+	height: auto;
 	// font-weight: 300;
 	@media screen and (max-width :$screen-sm) {
 		height: 700px;
