--- a/fitness/sass/style.scss
+++ b/fitness/sass/style.scss
@@ -228,7 +228,7 @@ figure {
 
 	.desc{
 		top: 25%;
-		position: absolute;
+		position: relative;
 		width: 100%;
 		margin-top: -100px;
 		z-index: 2;
@@ -1445,6 +1445,9 @@ form#searchform {
 .search-result {
     margin-top: 10px;
     margin-bottom: 10px;
+    position: relative;
+    height: 150px;
+    overflow: hidden;
     h3 {
         color: white;
     }
