--- a/fitness/sass/style.scss
+++ b/fitness/sass/style.scss
@@ -174,7 +174,7 @@ figure {
 .fh5co-cover,
 .fh5co-hero {
 	position: relative;
-	height: auto;
+	height: 800px;
 	// font-weight: 300;
 	@media screen and (max-width :$screen-sm) {
 		height: 700px;
@@ -228,7 +228,7 @@ figure {
 
 	.desc{
 		top: 25%;
-		position: relative;
+		position: absolute;
 		width: 100%;
 		margin-top: -100px;
 		z-index: 2;
