--- a/fitness/sass/style.scss
+++ b/fitness/sass/style.scss
@@ -232,7 +232,7 @@ figure {
 		width: 100%;
 		margin-top: -100px;
 		z-index: 2;
-		color: $brand-white;
+		color: #333333
 		
 		@media screen and (max-width: $screen-sm) {
 			padding-left: 15px;
@@ -1465,7 +1465,7 @@ input[type=text], input[type=password] {
 /* Set a style for all buttons */
 button {
     background-color: #4CAF50;
-    color: white;
+    color: black;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
@@ -1477,6 +1477,12 @@ button:hover {
     opacity: 0.8;
 }
 
+.loginbutton{
+    width: auto;
+    padding: 10px 18px;
+    background-color: #4CAF50
+    
+}
 /* Extra styles for the cancel button */
 .cancelbtn {
     width: auto;
