forgot a semi colon

--- a/fitness/sass/style.scss
+++ b/fitness/sass/style.scss
@@ -232,7 +232,7 @@ figure {
 		width: 100%;
 		margin-top: -100px;
 		z-index: 2;
-		color: #333333
+		color: #333333;
 		
 		@media screen and (max-width: $screen-sm) {
 			padding-left: 15px;
