--- a/fitness/sass/style.scss
+++ b/fitness/sass/style.scss
@@ -746,6 +746,11 @@ td, th {
     padding-right: 10px;
     
 }
+tr {
+    td:first-child {
+        padding-left: 0px;
+    }
+}
 
 // PRICING
 .fh5co-pricing{
