--- a/fitness/sass/style.scss
+++ b/fitness/sass/style.scss
@@ -176,9 +176,17 @@ figure {
 
 .fh5co-cover,
 .fh5co-hero {
-	position: relative;
-	height: 800px;
+	//position: relative;
+	//height: 800px;
 	// font-weight: 300;
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: 10;
+    overflow-y: scroll;
 	@media screen and (max-width :$screen-sm) {
 		height: 700px;
 	}
@@ -209,8 +217,8 @@ figure {
 }
 
 .fh5co-cover{
-	background-size: cover;
-	position: relative;
+	//background-size: cover;
+	//position: relative;
 	@media screen and (max-width: $screen-sm) {
 		heifght: inherit;
 		padding: 3em 0;
@@ -1210,8 +1218,8 @@ tr {
 
 
 #fh5co-wrapper {
-	overflow-x: hidden;
-	position: relative;
+	//overflow-x: hidden;
+	//position: relative;
 }
 .fh5co-offcanvas {
 	overflow: hidden;
