--- a/fitness/css/style.css
+++ b/fitness/css/style.css
@@ -35,13 +35,13 @@ p, ul, ol {
   color: #848484;
   font-family: "Roboto", Arial, sans-serif; }
 
-h1, h2, h4, h5, h6 {
+h1, h2, h5, h6 {
   color: #212121;
   font-family: "Roboto", Arial, sans-serif;
   font-weight: 400;
   margin: 0 0 30px 0; }
 
-h3 {
+h3, h4 {
   color: white; }
 
 figure {
