--- a/fitness/sass/style.scss
+++ b/fitness/sass/style.scss
@@ -141,13 +141,13 @@ p, ul, ol {
 	font-family: $font-primary;
 }
 
-h1, h2, h4, h5, h6 {
+h1, h2, h5, h6 {
 	color: $brand-darker;
 	font-family: $font-primary;
 	font-weight: 400;
 	margin: 0 0 30px 0;
 }
-h3 {
+h3, h4{
     color: white;
 }
 figure {
